pyfll-installer (001-1) unstable; urgency=low

  * trivial/ unuseable packaging, inject, actual development starts when it's
    online
  * worked on tableWidget, partition name, fstype added 
  * uuid to tableWidget added 
  * bug-fix in libparse-debcontrol-perl 
  * bug in pyqt4, no icon and text in buttons and labels. icons removed 
  * tableWidget shows the text now 

 -- Horst Tritremmel <hjt@sidux.com>  Thu, 17 Apr 2008 16:31:09 +0200