@@ -1,5 +1,16 @@
-[ 'text_to_comboBox' ]
+[ 'timezone' ]
+tz_file = "/etc/timezone"
 
+
+[ 'filesystem' ]
+supported = """
+ext3
+ext4
+reiserfs
+"""
+
+
+[ 'text_to_comboBox' ]
 comboBox_mountpoints = """
 mbr
 partition
@@ -7,5 +18,4 @@ partition
 
 
 [ 'text_to_lineEdit' ]
-
 lineEdit_hostname = "siduxbox"
